Possible fix for notation being too small.

--- a/work/style-local.css
+++ b/work/style-local.css
@@ -255,3 +255,10 @@ span.triangle, span.backward {
 	display:none;
 
 }
+
+table.verovio-humdrum {
+	width: 100%;
+}
+
+
+
